cmake_minimum_required(VERSION 2.8)
set (CMAKE_CXX_STANDARD 11)
project( main )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories(${PROJECT_SOURCE_DIR})
add_executable( main cpe_approach.cpp main.cpp)
target_link_libraries( main ${OpenCV_LIBS} )